Refactor http requests handling